...
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zn4-yG-cxW" userLabel="Add Server">
                                <rect key="frame" x="159" y="294" width="57" height="30"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <segue destination="LDR-tz-9ed" kind="show" id="Gj0-oO-eNh"/>
...
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem title="Star" id="VcU-fa-V5f" userLabel="Star boutton">
                                        <connections>
                                            <action selector="star:" destination="zsG-x9-2za" id="RwX-qv-2d9"/>
...
        <scene sceneID="tbh-yG-xcX">
            <objects>
                <viewController id="LPm-N3-FEI" userLabel="Server" customClass="ServerViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="znn-gf-Efm"/>
...
                                <rect key="frame" x="169" y="160" width="37" height="29"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <segue destination="hyy-VQ-rcz" kind="show" identifier="toClientId" id="nah-0H-R3t"/>
...
        <scene sceneID="VmF-x9-ghS">
            <objects>
                <viewController id="hyy-VQ-rcz" userLabel="ClientId" customClass="ClientIdViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="T3x-Ud-Wa2"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientSecret" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iBk-4L-sqH">
                                <rect key="frame" x="16" y="160" width="343" height="30"/>
                                <nil key="textColor"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C1D-rB-gOJ">
                                <rect key="frame" x="16" y="122" width="343" height="30"/>
                                <nil key="textColor"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UQC-pk-uO1">
                                <rect key="frame" x="16" y="160" width="343" height="30"/>
                                <nil key="textColor"/>
...
