...
                                <rect key="frame" x="175" y="481" width="64" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="Home.Register.Button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="29" id="uHV-vJ-PUc"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="LDR-tz-9ed" kind="show" id="Gj0-oO-eNh"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="892" y="-5"/>
        </scene>
        <!--Server-->
        <scene sceneID="tbh-yG-xcX">
            <objects>
                <viewController storyboardIdentifier="ServerViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="LPm-N3-FEI" userLabel="Server" customClass="ServerViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="znn-gf-Efm"/>
                        <viewControllerLayoutGuide type="bottom" id="21n-Ne-pUp"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="a4U-4S-atg">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="teE-c3-any">
                                <rect key="frame" x="188.5" y="184" width="37" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="Server.Next.Button"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <state key="normal" title="Next"/>
                                <connections>
                                    <action selector="nextPressed:" destination="LPm-N3-FEI" eventType="touchUpInside" id="RgU-Ws-f1q"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
            </objects>
            <point key="canvasLocation" x="892" y="817"/>
        </scene>
        <!--ClientId-->
        <scene sceneID="VmF-x9-ghS">
            <objects>
                <viewController storyboardIdentifier="ClientIdViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hyy-VQ-rcz" userLabel="ClientId" customClass="ClientIdViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="T3x-Ud-Wa2"/>
                        <viewControllerLayoutGuide type="bottom" id="BXs-WV-4No"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="lmm-lG-qux">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ClientId.ClientId.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ClientSecret" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iBk-4L-sqH">
                                <rect key="frame" x="20" y="184" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ClientId.ClientSecret.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
...
                        <viewControllerLayoutGuide type="bottom" id="Lvb-T3-PgC"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="jMl-7N-NES">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C1D-rB-gOJ">
                                <rect key="frame" x="20" y="146" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Login.Username.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UQC-pk-uO1">
                                <rect key="frame" x="20" y="184" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Login.Password.TextField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" name="UbuntuTitling-Bold" family="Ubuntu Titling" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                            </textField>
...
